add support for authenticating an outgoing request Also made a fix for the DbProxy to reuse a TypeReference